style input + copy btn

--- a/index.html
+++ b/index.html
@@ -9,17 +9,27 @@
 <body>
     <div class="main-container"> 
         <div class="header">
-            <h1>Generate a</h1>
-            <h1>random password</h1>
+            <h1>Generate a random password</h1>
             <p>Never use an insecure password again.</p>
+        </div>
+        <div class="password">
+            <div class="password-input1">
+                <input type="text">
+                <button id="copy">Copy</button>
+            </div>
+            <div class="password-input2">
+                <input type="text">
+                <button id="copy">Copy</button>
+            </div>
         </div>
         <div>
             <button id="generate">Generate</button>
         </div>
-        <div class="password">
-           <input type="text">
-           <input type="text">
-    </div>
+        <div class="slider">
+            <label class="switch">
+                <span class="slider round"></span>
+            </label>
+        </div>
     </div>  
     <div class="footer">
         <p>© 2023 Random Password Generator</p>
