style input box & btns

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main-container"> 
         <div class="header">
-            <h1>Generate a random password</h1>
+            <h1>Generate a <span style="color: #4caf50"> random password</span> </h1>
             <p>Never use an insecure password again.</p>
         </div>
         <div class="password">
@@ -22,15 +22,17 @@
                 <button id="copy">Copy</button>
             </div>
         </div>
-        <div>
-            <button id="generate">Generate</button>
+        <div class="generate-btn">
+            <button  id="generate">Generate</button>
         </div>
         <div class="slider">
+            
             <label class="switch">
                 <span class="slider round"></span>
             </label>
         </div>
-    </div>  
+    </div> 
+    <br> 
     <div class="footer">
         <p>© 2023 Random Password Generator</p>
     </div>
