--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
         </div>
         <div class="password">
             <div class="password-input1">
-                <input type="text">
-                <button id="copy">Copy</button>
+                <input id="input-el-1" type="text">
+                <button id="copy" onclick="copyPassword()">Copy</button>
             </div>
             <div class="password-input2">
-                <input type="text">
-                <button id="copy">Copy</button>
+                <input id="input-el-2" type="text">
+                <button id="copy" onclick="copyPassword()">Copy</button>
             </div>
         </div>
         <div class="checkbox">
-            <label for="myCheck">Symbols:</label> 
-            <input type="checkbox" id="symbolCheck" onclick="removeSymbols()">
+            <label for="myCheck1">Symbols:</label> 
+            <input type="checkbox" id="symbolCheck" onclick="includeSymbols()">
             <br/>
-            <label for="myCheck">Numbers:</label> 
-            <input type="checkbox" id="numbersCheck" onclick="removeNumbers()">
+            <label for="myCheck2">Numbers:</label> 
+            <input type="checkbox" id="numbersCheck" onclick="includeNumbers()">
         </div>
         <div class="generate-btn">
-            <button  id="generate">Generate</button>
+            <button  id="generate" onclick="generateRandomPasswords()">Generate</button>
         </div>
         <div class="slider">
             <label class="switch">
-                <span onclick="toogleLightMode" class="slider round"></span>
+                <span onclick="toogleLightMode()" class="slider round"></span>
             </label>
         </div>
     </div> 
