--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input type="checkbox" id="numbersCheck" onclick="includeNumbers()">
         </div>
         <div class="generate-btn">
-            <button  id="generate" onclick="generateRandomPasswords()">Generate</button>
+            <button  id="generate" onclick="generateRandomPassword()">Generate</button>
         </div>
         <div class="slider">
             <label class="switch">
