JS create function to generate password

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="password">
             <div class="password-input1">
                 <input id="input-el-1" type="text">
-                <button id="copy" onclick="copyPassword()">Copy</button>
+                <button id="copy" onclick="copyPasswordOne()">Copy</button>
             </div>
             <div class="password-input2">
                 <input id="input-el-2" type="text">
-                <button id="copy" onclick="copyPassword()">Copy</button>
+                <button id="copy" onclick="copyPasswordTwo()">Copy</button>
             </div>
         </div>
         <div class="checkbox">
