disabled edit text input&console log input

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
         </div>
         <div class="password">
             <div class="password-input1">
-                <input id="input-el-1" type="text">
+                <input disabled="disabled" id="input-el-1" type="text">
                 <button id="copy" onclick="copyPasswordOne()">Copy</button>
             </div>
             <div class="password-input2">
-                <input id="input-el-2" type="text">
+                <input disabled="disabled" id="input-el-2" type="text">
                 <button id="copy" onclick="copyPasswordTwo()">Copy</button>
             </div>
         </div>
+        <h3 style="margin-left: auto ; margin-right:auto ; margin:none; color: #4caf50; ">Exclude</h3>
         <div class="checkbox">
+           
             <label for="myCheck1">Symbols:</label> 
             <input type="checkbox" id="symbolCheck" onclick="includeSymbols()">
             <br/>
