style toogle dark/light mode

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         <div class="generate-btn">
             <button  id="generate" onclick="newRandomPassword()">Generate</button>
         </div>
-        <div class="slider">
+        <div>
             <label class="switch">
-                <span onclick="toogleLightMode()" class="slider round"></span>
+                <input type="checkbox">
+                <span class="slider"></span>
             </label>
         </div>
     </div> 
