JS function to copy pasword one or two

--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
         </div>
         <div class="checkbox">
             <label for="myCheck1">Upper Case:</label>
-            <input type="checkbox" id="symbolCheck" onclick="includeUpperCase()">
+            <input type="checkbox" id="upCaseCheck" onclick="includeUpperCase()">
             <label for="myCheck2">Lower Case:</label>
-            <input type="checkbox" id="symbolCheck" onclick="includeLowerCase()">
-            <br/>
+            <input type="checkbox" id="lowCaseCheck" onclick="includeLowerCase()">
             <label for="myCheck3">Symbols:</label> 
             <input type="checkbox" id="symbolCheck" onclick="includeSymbols()">
-            <br/>
             <label for="myCheck4">Numbers:</label> 
             <input type="checkbox" id="numbersCheck" onclick="includeNumbers()">
         </div>
@@ -39,7 +37,7 @@
         </div>
         <div>
             <label class="switch">
-                <input type="checkbox">
+                <input id="checkbox" type="checkbox">
                 <span class="slider"></span>
             </label>
         </div>
