style LightMode @media max-w 400

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="main-container"> 
+    <div class="main-container" id="container-el"> 
         <div class="header">
             <h1>Generate a <span style="color: #4caf50"> random password</span> </h1>
             <p>Never use an insecure password again.</p>
@@ -37,7 +37,7 @@
         </div>
         <div>
             <label class="switch">
-                <input id="checkbox" type="checkbox">
+                <input id="checkbox" type="checkbox" name="toogle">
                 <span class="slider"></span>
             </label>
         </div>
