function generate pasword upper & lower case

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </div>
         <div id="checkbox-el-select" class="checkbox">
             <label for="myCheck1">Upper Case:</label>
-            <input type="checkbox" id="upCaseCheck" onclick="includeUpperCase()">
+            <input type="checkbox" id="upCaseCheck" onclick="getUppercase()">
             <label for="myCheck2">Lower Case:</label>
-            <input type="checkbox" id="lowCaseCheck" onclick="includeLowerCase()">
+            <input type="checkbox" id="lowCaseCheck" onclick="getLowercase()">
             <label for="myCheck3">Symbols:</label> 
-            <input type="checkbox" id="symbolCheck" onclick="includeSymbols()">
+            <input type="checkbox" id="symbolCheck" onclick=" getSymbol()">
             <label for="myCheck4">Numbers:</label> 
-            <input type="checkbox" id="numbersCheck" onclick="includeNumbers()">
+            <input type="checkbox" id="numbersCheck" onclick="getNumber()">
         </div>
         <div class="generate-btn">
             <button  id="generate" onclick="newRandomPassword()">Generate</button>
